Fix HTML encoding issues in index.htmldone

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="mini-tags">
             <span class="mini-tag">HTML</span>
             <span class="mini-tag">CSS</span>
-            <span class="mini-tag">Website</span>
+            <span class="mini-tag">Responsive</span>
           </div>
           <div class="btn-row small">
             <a class="button small" href="https://damanalishah0.github.io/OneSchoolWeb.html/" target="_blank">View</a>
@@ -208,3 +208,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
