--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <span class="mini-tag">Responsive</span>
           </div>
           <div class="btn-row small">
-            <a class="button small" href="https://damanalishah0.github.io/The-River-Hotel/" target="_blank">View</a>
+            <a class="button small"https://damanalishah0.github.io/TheRiver.html/" target="_blank">View</a>
           </div>
         </div>
 
@@ -208,4 +208,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
